[gd_scene load_steps=5 format=3 uid="uid://diw6t7ifc83w3"]

[ext_resource type="Script" path="res://Scripts/Banner.gd" id="1_pfmq6"]
[ext_resource type="PackedScene" uid="uid://b3vb7tg7wpihs" path="res://Skins/Skin.tscn" id="2_qnmo7"]
[ext_resource type="Script" path="res://Scripts/PositionTween.gd" id="3_3icb5"]
[ext_resource type="Script" path="res://Scripts/AlphaTween.gd" id="6_otv8g"]

[node name="Banner" type="Node2D"]
visible = false
script = ExtResource("1_pfmq6")
duration = 5.0
loadscene = "res://MainGame.tscn"

[node name="Skin" parent="." instance=ExtResource("2_qnmo7")]

[node name="BannerBack" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
centered = false

[node name="BannerLeft" type="Sprite2D" parent="."]
centered = false
script = ExtResource("3_3icb5")
startpos = Vector2(-600, 0)
start = 1.5
end = 2.5
step = 16

[node name="BannerRight" type="Sprite2D" parent="."]
centered = false
script = ExtResource("3_3icb5")
startpos = Vector2(600, 0)
start = 0.5
end = 1.5
step = 16

[node name="BannerText" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
centered = false
script = ExtResource("6_otv8g")
endalpha = 1.0
start = 2.0
end = 3.0
step = 25
